add client class. the client can send information to the server normally. all data interaction were implemented with json

--- a/config.json
+++ b/config.json
@@ -1,8 +1,24 @@
 {
-    "general_config":
-    {
-        "seq_path": "Sequences",
-        "cfg_path": "Sequences",
-        "work_path": "."
-    }
+    "general_config":[
+        {
+            "codec": [
+              {
+                "encoder type": "AVS3",
+                "encoder name": "TAppEncoder"
+              },
+
+              {
+                "encoder type": "RD",
+                "encoder name": "encoder"
+              }
+            ],
+          "deep learning":[
+            {
+              "framework": "tensorflow",
+              "script name": "train.py"
+            }
+          ]
+        }
+    ]
+
 }
